<resources>
    <string name="app_name">MD</string>
    <string name="splash_quick_apply">快速报单</string>
    <string name="splash_login">员工用户登录</string>
    <string name="login_user">用户登录</string>
    <string name="login_account">账号</string>
    <string name="login_pwd">密码</string>
    <string name="login">登录</string>
    <string name="pending_items">代办事项</string>
    <string name="quickly_submit">提交意向</string>
    <string name="product_advantage_quick">产品优势</string>
    <string name="name_quick">客户姓名</string>
    <string name="cellphone_quick">联系方式</string>
    <string name="code_quick">推荐码(选填)</string>
    <string name="apply_success">提交成功</string>
    <string name="cancel_apply">取消报单</string>
    <string name="user_info">客户信息</string>
    <string name="title_user_name">户主姓名</string>
    <string name="next">下一步</string>
    <string name="business_process">业务办理</string>
    <string name="processing">办理中</string>
    <string name="loan">放款</string>
    <string name="broker_amount">佣金</string>
    <string name="detail_finish">详情</string>
    <string name="after_loan">贷后管理</string>
    <string name="mine">我的</string>
    <string name="quota_left">“</string>
    <string name="quota_right">”</string>
    <string name="code_mine">我的推荐码</string>
    <string name="my_commission">我的佣金</string>
    <string name="my_business">我的业务</string>
    <string name="my_chart">我的业绩</string>
    <string name="my_contacts">我的通讯录</string>
    <string name="my_profile">我的资料</string>
    <string name="my_recommend">我的推荐码</string>
    <string name="balance_commission">佣金余额(元)</string>
    <string name="withdraw_btn">佣金提现</string>
    <string name="withdraw_record">提现记录</string>
    <string name="settle_record">结清记录</string>
    <string name="rmb">￥</string>
    <string name="bind_card">绑定银行卡</string>
    <string name="withdraw_bank">提现银行</string>
    <string name="withdraw_sub_bank">支行名称</string>
    <string name="withdraw_user_name">户主姓名</string>
    <string name="withdraw_card">提现卡号</string>
    <string name="pls_input">请输入</string>
    <string name="submit">提交</string>
    <string name="apply_withdraw">申请提现</string>
    <string name="withdraw_amount">提现金额</string>
    <string name="already_withdraw_amount">已提现金额</string>
    <string name="already_settle_amount">待结算金额</string>
    <string name="withdraw_not_use">提现功能暂未启用</string>
    <string name="withdraw_dialog_tip">您需先绑定用于提现的银行卡</string>
    <string name="do_bind_card">立即绑定</string>
</resources>
