<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/ll_toolbar_login"
        style="@style/toolbar_ll">

        <ImageButton
            android:id="@+id/iv_back_login"
            style="@style/toolbar_iv" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_toolbar_login"
        android:orientation="vertical">

        <LinearLayout
            style="@style/margin_start_x13"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x40">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/login_user"
                android:textColor="@color/black87"
                android:textSize="26.4sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="@style/margin_start_x13"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x73"
            android:layout_marginTop="@dimen/x13"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/login_account"
                android:textColor="@color/black54"
                android:textSize="15.4sp" />

            <EditText
                android:id="@+id/et_account_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@color/black87"
                android:textSize="15.4sp" />

        </LinearLayout>

        <View style="@style/line" />

        <LinearLayout
            style="@style/margin_start_x13"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x73"
            android:layout_marginTop="@dimen/x13"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/login_pwd"
                android:textColor="@color/black54"
                android:textSize="15.4sp" />

            <EditText
                android:id="@+id/et_pwd_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:inputType="textPassword"
                android:textColor="@color/black54"
                android:textSize="15.4sp" />

        </LinearLayout>

        <View style="@style/line" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x37"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/x13"
        android:background="@drawable/shape_btn_green"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15.4sp" />
</RelativeLayout>