<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:minHeight="?attr/actionBarSize">

        <TextView
            style="@style/toolbar_title"
            android:text="@string/mine" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:paddingBottom="@dimen/x8"
        android:paddingTop="@dimen/x8">

        <ImageView
            android:id="@+id/iv_avatar_mine"
            style="@style/margin_start_x13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/avatar_default" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:layout_toEndOf="@id/iv_avatar_mine"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <!--姓名，推荐码-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name_mine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18.7sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/x3"
                        android:background="@drawable/shape_mine"
                        android:gravity="center"
                        android:paddingBottom="@dimen/x3"
                        android:paddingEnd="@dimen/x7"
                        android:paddingStart="@dimen/x7"
                        android:paddingTop="@dimen/x3"
                        android:text="@string/code_mine"
                        android:textColor="@color/white"
                        android:textSize="12.1sp" />
                </LinearLayout>
                <!--手机号，推荐码-->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/x8"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_phone_mine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textSize="18.7sp" />

                    <TextView
                        android:id="@+id/tv_code_mine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/x3"
                        android:textColor="@color/white"
                        android:textSize="15.4sp"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/quota_left"
                    android:textColor="@color/white"
                    android:textSize="24.2sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_sign_mine"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/x2"
                    android:layout_marginEnd="@dimen/x3"
                    android:layout_marginStart="@dimen/x3"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:textSize="13.2sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/quota_right"
                    android:textColor="@color/white"
                    android:textSize="24.2sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x7"
        android:background="@drawable/shape_shadow" />
    <!--我的佣金-->
    <LinearLayout
        android:id="@+id/ll_commission_mine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_commission" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_commission"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_business" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_commission"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_chart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_chart"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_contacts_mine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_contact" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_contacts"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_mine_info_mine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:layout_marginTop="@dimen/x6"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_profile" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_profile"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

    <LinearLayout
        android:id="@+id/ll_recommend_code_mine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x46"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/x13">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_my_recommend" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/x13"
            android:text="@string/my_recommend"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </LinearLayout>

    <View style="@style/line" />

</LinearLayout>
