<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_quick"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ll_toolbar_apply_info"
        style="@style/toolbar_common">

        <ImageButton
            android:id="@+id/iv_back_user_info"
            style="@style/toolbar_back_green" />

        <Button
            android:textStyle="bold"
            android:id="@+id/btn_cancel_apply_info"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@null"
            android:gravity="center"
            android:text="@string/cancel_apply"
            android:textColor="@color/black87"
            android:textSize="15.4sp" />
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_toolbar_apply_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/md_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/user_info" />
            <!--客户姓名-->
            <LinearLayout
                style="@style/margin_start_x13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x73"
                android:layout_marginTop="@dimen/x13"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/name_quick"
                    android:textColor="@color/black54"
                    android:textSize="15.4sp" />

                <EditText
                    android:id="@+id/et_name_apply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/black87"
                    android:textSize="15.4sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View style="@style/line" />
            <!--联系方式-->
            <LinearLayout
                style="@style/margin_start_x13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x73"
                android:layout_marginTop="@dimen/x13"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/cellphone_quick"
                    android:textColor="@color/md_red_warn"
                    android:textSize="15.4sp" />

                <EditText
                    android:id="@+id/et_cellphone_apply"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:inputType="phone"
                    android:textColor="@color/black54"
                    android:textSize="15.4sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View style="@style/line" />
            <!--身份证号-->
            <LinearLayout
                style="@style/margin_start_x13"
                android:layout_width="match_parent"
                android:layout_height="@dimen/x73"
                android:layout_marginTop="@dimen/x13"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/id_no"
                    android:textColor="@color/apply_user_name"
                    android:textSize="15.4sp" />

                <EditText
                    android:id="@+id/et_customer_id_no"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:singleLine="true"
                    android:textColor="@color/black87"
                    android:textSize="15.4sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View style="@style/line" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_submit_user_info"
        style="@style/md_btn"
        android:layout_alignParentBottom="true"
        android:text="@string/next" />
</RelativeLayout>